--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <%= hidden_field_tag(:deck_id, @deck.id) %>
+  <%= hidden_field_tag(:deck_id, (card.deck_id || @deck.id)) %>
 
   <div class="submit">
     <%= f.submit %>
