--- a/app/components/card_item_component/card_item_component.html.erb
+++ b/app/components/card_item_component/card_item_component.html.erb
@@ -1,23 +1,24 @@
 <div 
   data-controller="card-item-component--card-item-component" 
-  data-action="click->card-item-component--card-item-component#flip"
   data-card-item-component--card-item-component-fliped-value="false"
   class="flex flex-col items-center cursor-pointer" 
 >
   <div 
     data-card-item-component--card-item-component-target="front"  
+    data-action="click->card-item-component--card-item-component#flip"
     class="" 
   >
     <%= @card.content_front %>
   </div>
   <div 
-    data-card-item-component--card-item-component-target="back"  
+    data-card-item-component--card-item-component-target="back" 
+    data-action="click->card-item-component--card-item-component#flip" 
     class=""
   >
     <span> <%= @card.content_back %> </span>
   </div>
-  <div class="flex rounded-md shadow-sm" role="group">
-    <%= button_to "Correct", "/card_items", method: :post , params: { card_id: @card.id, is_correct: true }, class: "px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white dark:border-white dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:bg-gray-700" %>
-    <%= button_to "Wrong","/card_items", method: :post , params: { card_id: @card.id, is_correct: false }, class: "px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-r-md hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white dark:border-white dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:bg-gray-700" %>
+  <div class="flex rounded-md shadow-sm">
+    <%= button_to "Correct", "/card_items", method: :post , params: { card_id: @card.id, is_correct: true }, class: "px-4 py-2 text-sm font-medium text-grey-900 bg-transparent border border-green-500 rounded-l-lg hover:bg-green-500 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white dark:border-white dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:bg-gray-700" %>
+    <%= button_to "Wrong","/card_items", method: :post , params: { card_id: @card.id, is_correct: false }, class: "px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-red-500 rounded-r-md hover:bg-red-500 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white dark:border-white dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:bg-gray-700" %>
   </div>
 </div>
